2007-12-04  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (assign (Sparse<LT>&,  const Sparse<RT>&)):
	Do nothing if one index is empty.

2007-12-04  David Bateman  <dbateman@free.fr>

	* Sparse.cc (assign (Sparse<LT>&,  const Sparse<RT>&)):
	Resize matrix as well if one dimension of lhs is zero and the rhs
	index exceeds the lhs index.
	* Sparse.cc (assign1 (Sparse<LT>&,  const Sparse<RT>&)):
	Don't resize to a smaller matrix for empty matrices with a max rhs
	index smaller than the non zero lhs index.

2007-12-04  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-util.h: Tag permute_vector_compare with OCTAVE_API.

2007-12-03  Moritz Borgmann  <octave@moriborg.de>

	* Array-util.cc (permute_vector_compare): Move here from Array.cc.
	* Array-util.h (permute_vector, permute_vector_compare): Provide decls.
	* Array.cc (permute_vector, permute_vector_compare): Delete.

2007-12-03  David Bateman  <dbateman@free.fr>

	* Sparse.cc (template <class LT, class RT> int assign
	(Sparse<LT>&,  const Sparse<RT>&)): Only set return matrix size to
	rhs values if both no. rows and columns are zero.

2007-11-30  John W. Eaton  <jwe@octave.org>

	* oct-sort.cc, oct-sort.h: Style fixes.

	* lo-math.h: New file.
	* Makefile.in (INCLUDES): Add it to the list.
	* liboctave/Array2.h, liboctave/ArrayN.h, liboctave/CmplxDET.cc,
	liboctave/DASPK.cc, liboctave/DASPK.h, liboctave/DASRT.cc,
	liboctave/DASRT.h, liboctave/DASSL.cc, liboctave/DASSL.h,
	liboctave/LSODE.cc, liboctave/LSODE.h, liboctave/NLEqn.h,
	liboctave/Quad.h, liboctave/Range.cc, liboctave/dbleDET.cc,
	liboctave/lo-cieee.c, liboctave/lo-ieee.cc,
	liboctave/lo-mappers.cc, liboctave/oct-time.cc,
	liboctave/oct-time.h, liboctave/randgamma.c,
	liboctave/randmtzig.c, liboctave/randpoisson.c: Include lo-math.h
	instead of cmath or math.h.
	* lo-mappers.h: Don't include sunmath.h here.

2007-11-26  John W. Eaton  <jwe@octave.org>

	* idx-vector.h (idx_vector::idx_vector_rep (const intNDArray<U>&)):